@@ -1,5 +1,11 @@
 2008-11-18  Neal H. Walfield  <neal@gnu.org>
 
+	* server.c (server_loop): Add code to the page fault handler that
+	not only map the faulted page but also some following pages.
+	Leave disabled.
+
+2008-11-18  Neal H. Walfield  <neal@gnu.org>
+
 	* activity.c (activity_destroy): Only print configuration when
 	destroying the root activity.
 
